--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -17,21 +17,28 @@
     position: absolute;
 
     width: 100vw;
-    max-width: 100%;
     height: 100%;
 }
 
 .divCircle {
-    animation: 1s ease-in 0s 1 expandDivCircle;
-    transform: translateY(75vh) scale(9);
+    /*animation: 1s ease-in 0s 1 expandDivCircle;*/
+    transform: scale(1);
+    position: sticky;
+    overflow: hidden;
+    top: 80vh;
+
+    /* create the circle */
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
 }
 
 @keyframes expandDivCircle {
     0% {
-        transform: translateY(75vh) scale(0);
+        transform: scale(0);
     }
 
     100% {
-        transform: translateY(75vh) scale(9);
+        transform: scale(9);
     }
 }
