finished implementing transition animation with fadein on new page

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,4 +1,4 @@
-.mainContainer {
+.overlayContainer {
     display: flex;
     flex-direction: column;
 }
@@ -10,7 +10,7 @@
 }
 
 .transitionContainer {
-    z-index: -1;
+    z-index: -2;
     overflow: hidden;
     flex-grow: 1;
 
@@ -18,8 +18,17 @@
 
     width: 100vw;
     height: 100%;
+
+    animation: 1s ease-in 0s 1 forwards fadeIn;
 }
 
+.transitionContainerFadeIn {
+    background-color: aqua;
+
+    animation: 1s ease-in 0s 1 normal forwards paused fadeIn;
+}
+
+/* Styling for canvas composing transition animation. */
 .circle {
     width: 600vmax;
     height: 600vmax;
@@ -37,5 +46,15 @@
     100% {
         width: 600vmax;
         height: 600vmax;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        filter: opacity(100);
+    }
+
+    100% {
+        filter: opacity(0);
     }
 }
