--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -6,7 +6,7 @@
 .contentContainer {
     margin-top: 80px;
     z-index: -1;
-    background-color: rgb(184, 92, 92);
+    /*background-color: rgb(184, 92, 92); */
 }
 
 .transitionContainer {
@@ -23,7 +23,7 @@
 }
 
 .transitionContainerFadeIn {
-    background-color: aqua;
+
 
     animation: 1s ease-in 0s 1 normal forwards paused fadeIn;
 }
