--- a/components/mainHeader.module.css
+++ b/components/mainHeader.module.css
@@ -15,6 +15,7 @@
     height: 50px;
 
     display: table;
+    margin: 5px;
 }
 
 .titleText {
@@ -25,6 +26,21 @@
 
     display: table-cell;
     vertical-align: middle;
+
+    color: #b2b2b2;
+}
+
+.subtitleText {
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+
+    display: table-cell;
+    vertical-align: middle;
+
+    margin-bottom: 5px;
+    margin-top: 0px;
 
     color: #b2b2b2;
 }
