--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -5,7 +5,13 @@
 
 .contentContainer {
     z-index: 1;
-    margin: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .transitionContainer {
