--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -1,4 +1,13 @@
 .profilePic {
     border-radius: 9999px;
-    
+}
+
+.profilePicContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text {
+    text-align: center;
 }
