--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -6,8 +6,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
 }
 
-.text {
-    text-align: center;
+.textBodyContent {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
+
+.divider {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: none;
+    height: 5px;
+    background-color: black;
+    color: black;
 }
