fully implemented collapsible and moved it to its own component file
changed transition container div position to fixed

--- a/styles/music-likes.module.css
+++ b/styles/music-likes.module.css
@@ -21,6 +21,7 @@
     border: 0;
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
 }
 
 .collapsible:hover, .activeCollapsible {
