--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -12,13 +12,14 @@
 .textBodyContent {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    margin: 30px 0px 30px 0px
 }
 
 .divider {
     margin-top: 20px;
     margin-bottom: 20px;
     border: none;
-    height: 5px;
+    height: 2px;
     background-color: black;
     color: black;
 }
