--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -46,3 +46,24 @@
 .githubLogoP2 {
     transform: translateY(5px);
 }
+
+.eachSlideEffect > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    height: 300px;
+    width: 400px;
+  }
+  
+  .eachSlideEffect span {
+    padding: 20px;
+    font-size: 20px;
+    background: #efefef;
+    text-align: center;
+  }
+
+  .slide {
+    height: 300px;
+    width: 400px;
+  }
