--- a/components/headerTab.module.css
+++ b/components/headerTab.module.css
@@ -10,8 +10,6 @@
     cursor: pointer;
 
     text-decoration: underline;
-
-    transition: background-color .3s ease-in;
 }
 
 .mainContainer {
@@ -19,6 +17,13 @@
     flex-grow: 1;
     
     position: relative;
+    overflow: hidden;
+}
+
+.mainContainerFalling {
+    height: 30px;
+    
+    position: absolute;
     overflow: hidden;
 }
 
