--- a/components/mainHeader.module.css
+++ b/components/mainHeader.module.css
@@ -52,7 +52,6 @@
 }
 
 .fallingTab {
-    position: absolute;
     text-decoration: none;
     color: #000000;
     font-size: 20px;
@@ -60,14 +59,38 @@
     font-family: Arial, Helvetica, sans-serif;
     line-height: 30px;
     height: 30px;
-    visibility: hidden;
 
     background-color: #A2D4F0;
-    animation: 0.8s cubic-bezier(.26,.02,.47,.17) 0s 1 dropTab;
+}
 
+.fallingTabContainer {
+    position: absolute;
+    height: 30px;
+    visibility: hidden;
+
+    overflow: hidden;
+
+    animation: 0.8s cubic-bezier(.26,.02,.47,.17) 0s 1 dropTab;
     animation-play-state: paused;
 
     transform: translateY(100vh);
+}
+
+.fallingTabWave {
+    position: absolute;
+
+    height: 80px;
+    width: 1000px;
+
+    background-image: url('../public/svgs/homeWave.svg');
+    background-repeat: repeat-x;
+    background-size: 300px 50px;
+
+    animation: 3s linear 0s infinite forwards animateWave;
+
+    animation-play-state: paused;
+
+    opacity: .7;
 }
 
 .headerUnderline {
@@ -84,7 +107,38 @@
     0% {
         transform: translateY(0);
     }
+
+    20% {
+        transform: translateY(-20px);
+    }
+
+    30% {
+        transform: translateY(-20px);
+    }
+
+    40% {
+        transform: translateY(0);
+    }
+
     100% {
         transform: translateY(100vh);
+    }
+}
+
+@keyframes animateWave {
+    0% {
+        transform: translateX(0%);
+    }
+    
+    5% {
+        top: 0px;
+    }
+
+    15% {
+        top: -20px;
+    }
+
+    100% {
+        transform: translateX(-60%);
     }
 }
