changed color scheme of site and added global variables to control color scheme

--- a/components/headerTab.module.css
+++ b/components/headerTab.module.css
@@ -1,6 +1,6 @@
 .tab {
     text-decoration: none;
-    color: #000000;
+    color: var(--main-text-color);
     font-size: 20px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
