--- a/components/collapsible.module.css
+++ b/components/collapsible.module.css
@@ -1,7 +1,7 @@
 .collapsible {
     height: 50px;
     width: 100%;
-    background-color: #49A7A7;
+    background-color: var(--secondary-text-color);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -41,6 +41,7 @@
     font-weight: bold;
     line-height: 18px;
     pointer-events: none;
+    color: var(--main-text-color);
 }
 
 .spaceHolder {
