--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -3,6 +3,7 @@
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 0px;
+    color: var(--main-text-color);
 }
 
 .bodyText {
@@ -10,6 +11,7 @@
     font-size: 16px;
     margin-bottom: 30px;
     margin-top: 3px;
+    color: var(--secondary-text-color);
 }
 
 .unorderedListText {
@@ -18,6 +20,7 @@
     margin-bottom: 30px;
     margin-top: 3px;
     padding-left: 16px;
+    color: var(--secondary-text-color);
 }
 
 .projectTitle {
@@ -26,6 +29,7 @@
     font-weight: bold;
     text-align: left;
     margin-top: 100px;
+    color: var(--main-text-color);
 }
 
 .divider {
@@ -33,37 +37,20 @@
     margin-bottom: 50px;
     border: none;
     height: 2px;
-    background-color: black;
-    color: black;
+    background-color: var(--main-text-color);
 }
 
 .projectThumbnail {
-    border-color: black;
+    border-color: var(--secondary-text-color);
     border-width: 3px;
     border-style: solid;
 }
 
 .githubLogoP2 {
-    transform: translateY(5px);
+    background-color: var(--secondary-text-color);
 }
 
-.eachSlideEffect > div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
-    height: 300px;
-    width: 400px;
-  }
-  
-  .eachSlideEffect span {
-    padding: 20px;
-    font-size: 20px;
-    background: #efefef;
-    text-align: center;
-  }
-
-  .slide {
-    height: 300px;
-    width: 400px;
-  }
+.githubLogoP1 {
+    background-color: var(--secondary-text-color);
+    padding-left: 5px;
+}
