--- a/components/headerTab.module.css
+++ b/components/headerTab.module.css
@@ -1,7 +1,7 @@
 .tab {
     text-decoration: none;
     color: var(--main-text-color);
-    font-size: 20px;
+    font-size: min(3vw, 20px);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 30px;
