--- a/components/mainHeader.module.css
+++ b/components/mainHeader.module.css
@@ -58,7 +58,7 @@
 .fallingTab {
     text-decoration: none;
     color: var(--main-text-color);
-    font-size: 20px;
+    font-size: min(3vw, 20px);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 30px;
