--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -48,9 +48,19 @@
 
 .githubLogoP2 {
     background-color: var(--secondary-text-color);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-width: 2px;
+    border-color: white;
+    border-style: solid solid solid none;
 }
 
 .githubLogoP1 {
     background-color: var(--secondary-text-color);
     padding-left: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-width: 2px;
+    border-color: white;
+    border-style: solid none solid solid;
 }
