--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,70 +1,77 @@
-.contentContainer {
-    margin-top: 20px;
-    margin-bottom: 20px;
+.backgroundContainer {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+}
+
+.sky {
+    position: fixed;
+    height: 50%;
+    width: 100%;
+
+    z-index: 0;
+
+    overflow: hidden;
+    
+    background: linear-gradient(1turn, rgba(255, 240, 33), rgba(213, 121, 250) 60%);
+
+    display: flex;
+    flex-direction: column;
+
+    justify-content: flex-end;
+}
+
+.lake {
+    position: fixed;
+    height: 50%;
+    width: 100%;
+    top: 50%;
+
+    z-index: 3;
+
+    background: radial-gradient(circle at top, rgba(255, 240, 33, 0.5), rgba(213, 121, 250, .5) 60%);
+
+    backdrop-filter: blur(4px);
+}
+
+.sunMoonContainer {
+    position: fixed;
+    width: 100%;
+    height: 50%;
+    overflow: hidden;
+
+    z-index: 1;
+}
+
+.sun {
+    position: relative;
+    width: 200px;
+    height: 200px;
+
+    background-color: yellow;
+    border-radius: 50%;
     margin-left: auto;
     margin-right: auto;
-    max-width: 800px;
-    padding-left: 20px;
-    padding-right: 20px;
-    overflow: hidden;
+
+    margin-top: 40vh;
 }
 
-.overlay {
-    z-index: 6;
-    overflow: hidden;
-    flex-grow: 1;
-
+.mountainsContainer {
     position: fixed;
-
-    width: 100vw;
-    height: 100%;
-
-    pointer-events: none;
-}
-
-.rippleTransition {
-    position: absolute;
-    width: 0px;
-    height: 0px;
-    bottom: 0%;
-
-    border-radius: 9000px 9000px 0 0;
-
-    opacity: 1;
-    transform: translateX(-50%);
-
-    transition: width 1s ease-in, height 1s ease-in;
-    transition-delay: .25s;
-}
-
-.rippleTransitionRing {
-    position: absolute;
-    width: 0px;
-    height: 0px;
-    bottom: 0%;
-
-    transform: translateX(-50%);
-
-    border-radius: 9000px 9000px 0 0;
-
-    transition: width 1s ease-in, height 1s ease-in;
-}
-
-.fadeTransition {
-    position: absolute;
     width: 100%;
     height: 100%;
-    
-    background-color: red;
 
-    animation: 1.5s ease-in 0s 1 forwards fadeIn;
+    z-index: 2;
+    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
-@keyframes fadeIn {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
+.testMountain {
+    width: 200px;
+    height: 200px;
+
+    background-color: gray;
+    border-radius: 50%;
 }
