finished main components of background with animation
implemented content container to layout to display page content

--- a/components/mainHeader.module.css
+++ b/components/mainHeader.module.css
@@ -1,4 +1,4 @@
-.headerContainer {
+/* .headerContainer {
     display: flex;
     flex-direction: column;
 
@@ -144,4 +144,4 @@
     100% {
         transform: translateX(-60%);
     }
-}
+} */
