--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,7 +1,42 @@
+
+
 .backgroundContainer {
     position: fixed;
     height: 100%;
     width: 100%;
+
+    --background-animation-duration: 60s;
+    --background-animation-delay: 0s;
+}
+
+.scrollContainer {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+}
+
+.contentMask {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+
+    overflow-y: scroll;
+
+    mask-image: 
+        linear-gradient(transparent, transparent 8%, black 10%, black 90%, transparent 92%, transparent),
+        linear-gradient(to left, black 17px, transparent 18px);
+}
+
+.contentContainer {
+    position: static;
+    margin-top: 94vh;
+
+    margin-left: 10vw;
+    margin-right: 10vw;
+
+    padding: 20px;
+
+    background: linear-gradient(.25turn, transparent, transparent 1%, rgba(0, 0, 0, 0.7) 2%, rgba(0, 0, 0, 0.7) 98%, transparent 99%, transparent);
 }
 
 .sky {
@@ -13,12 +48,87 @@
 
     overflow: hidden;
     
-    background: linear-gradient(1turn, rgba(255, 240, 33), rgba(213, 121, 250) 60%);
+    background: rgb(192, 255, 255);
 
     display: flex;
     flex-direction: column;
 
     justify-content: flex-end;
+
+    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateSky;
+}
+
+@keyframes animateSky {
+    0% {
+        background: rgb(192, 250, 250);
+    }
+
+    25% {
+        background: rgb(32, 31, 133);
+    }
+
+    50% {
+        background: rgb(12, 2, 48);
+    }
+
+    75% {
+        background: rgb(57, 55, 160);
+    }
+
+    100% {
+        background: rgb(192, 250, 250);
+    }
+}
+
+.skyFilter {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+
+    background: linear-gradient(transparent, transparent 80%, rgba(255, 167, 3, 0.726) 100%);
+
+    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateSkyFilter;
+}
+
+@keyframes animateSkyFilter {
+    0% {
+        opacity: 0;
+        
+    }
+
+    15% {
+        opacity: 0;
+        background: linear-gradient(transparent, transparent 60%, rgba(255, 255, 255, 0.5));
+    }
+
+    25% {
+        background: linear-gradient(transparent, transparent 60%, rgba(255, 255, 255, 0.5));
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.6;
+        background: linear-gradient(transparent, transparent 60%, rgba(255, 255, 255, 0.5));
+    }
+
+    65% {
+        opacity: 0;
+        background: linear-gradient(transparent, transparent 60%, rgba(255, 255, 255, 0.5));
+    }
+
+    66%, 85% {
+        opacity: 0;
+        background: linear-gradient(transparent, transparent 80%, rgba(255, 167, 3, 0.726) 100%);
+    }
+
+    75% {
+        opacity: 1;
+        background: linear-gradient(transparent, transparent 80%, rgba(255, 167, 3, 0.726) 100%);
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
 
 .lake {
@@ -29,31 +139,194 @@
 
     z-index: 3;
 
-    background: radial-gradient(circle at top, rgba(255, 240, 33, 0.5), rgba(213, 121, 250, .5) 60%);
+    overflow: hidden;
+    background: rgba(14, 167, 214, 0.5);
 
     backdrop-filter: blur(4px);
+
+    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateLake;
+}
+
+@keyframes animateLake {
+    0% {
+        background: rgba(14, 167, 214, 0.5);
+    }
+
+    25% {
+        background: rgba(1, 20, 80, 0.5);
+    }
+
+    50% {
+        background: rgba(14, 3, 31, 0.8);
+    }
+
+    75% {
+        background: rgba(1, 20, 80, 0.5)
+    }
+
+    100% {
+        background: rgba(14, 167, 214, 0.5);
+    }
+}
+
+.lakeFilter {
+    position: fixed;
+    height: 50%;
+    width: 100%;
+
+    overflow: hidden;
+
+    background: radial-gradient(ellipse at top, rgba(255, 240, 33, 0.5), transparent 60%);
+
+    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateLakeFilter;
+}
+
+@keyframes animateLakeFilter {
+    0% {
+        background: linear-gradient(white, transparent 20%);
+        opacity: .5;
+    }
+
+    14% {
+        background: linear-gradient(white, transparent 15%);
+        opacity: 0;
+    }
+
+    65% {
+        background: radial-gradient(ellipse at top, rgba(255, 240, 33, 0.5), transparent 60%);
+        opacity: 0;
+    }
+
+    75% {
+        background: radial-gradient(ellipse at top, rgba(255, 240, 33, 0.5), transparent 60%);
+        opacity: 1;
+    }
+
+    85% {
+        background: radial-gradient(ellipse at top, rgba(255, 240, 33, 0.5), transparent 60%);
+        opacity: 0;
+    }
+
+    86% {
+        background: linear-gradient(white, transparent 15%);
+        opacity: 0;
+    }
+
+    100% {
+        background: linear-gradient(white, transparent 15%);
+        opacity: .5;
+    }
+}
+
+.lakeMoonReflection {
+    position: relative;
+    height: 250px;
+    width: 250px;
+
+    top: -125px;
+
+    left: 50%;
+    transform: translate(-50%, 0vh);
+
+    background: radial-gradient(white, transparent 60%);
+
+    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateLakeMoonReflection;
+}
+
+@keyframes animateLakeMoonReflection {
+    0% {
+        transform: translate(-50%, -150vh);
+    }
+
+    25% {
+        transform: translate(-50%, 0vh);
+        height: 250px;
+    }
+
+    50% {
+        height: 1000px;
+        transform: translate(-50%, 150vh);
+        opacity: 0;
+    }
+
+    75%, 100% {
+        transform: translate(-50%, 300vh);
+    }
 }
 
 .sunMoonContainer {
     position: fixed;
-    width: 100%;
+    width: 200px;
     height: 50%;
     overflow: hidden;
+
+    left: 50%;
+    transform: translateX(-50%);
 
     z-index: 1;
 }
 
 .sun {
-    position: relative;
+    position: fixed;
     width: 200px;
     height: 200px;
 
-    background-color: yellow;
+    background-color: rgb(253, 253, 115);
     border-radius: 50%;
     margin-left: auto;
     margin-right: auto;
 
-    margin-top: 40vh;
+    top: -100px;
+    transform: translateY(50vh);
+
+    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateSun;
+}
+
+@keyframes animateSun {
+    0%, 50% {
+        transform: translateY(250vh);
+        background-color: rgb(255, 166, 0);
+    }
+    75% {
+        transform: translateY(50vh);
+        background-color: rgb(255, 166, 0);
+    }
+    80% {
+        transform: translateY(20vh);
+        background-color: rgb(255, 255, 255);
+    }
+    100% {
+        transform: translateY(-100vh);
+        background-color: rgb(255, 255, 255);
+    }
+}
+
+.moon {
+    position: fixed;
+    width: 200px;
+    height: 200px;
+
+    background-color: rgb(212, 212, 212);
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+
+    top: -100px;
+    transform: translateY(50vh);
+
+    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards animateMoon;
+}
+
+@keyframes animateMoon {
+    0% {
+        transform: translateY(200vh);
+    }
+    25% {
+        transform: translateY(50vh)
+    }
+    75%, 100% {
+        transform: translateY(-250vh);
+    }
 }
 
 .mountainsContainer {
@@ -66,6 +339,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+
+    justify-content: space-between;
 }
 
 .testMountain {
