--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,12 +1,33 @@
+.contentMask::-webkit-scrollbar {
+    display: block;
+}
 
+.contentMask::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.contentMask::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+
+    background-clip: content-box;
+    border: 3px solid transparent
+}
+
+.contentMask::-webkit-scrollbar-track-piece:end {
+    background: transparent;
+    margin-bottom: 60px;
+}
+
+.contentMask::-webkit-scrollbar-track-piece:start {
+    background: transparent;
+    margin-top: 70px;
+}
 
 .backgroundContainer {
     position: fixed;
     height: 100%;
     width: 100%;
-
-    --background-animation-duration: 60s;
-    --background-animation-delay: 0s;
 }
 
 .scrollContainer {
@@ -23,7 +44,7 @@
     overflow-y: scroll;
 
     mask-image: 
-        linear-gradient(transparent, transparent 8%, black 10%, black 90%, transparent 92%, transparent),
+        linear-gradient(transparent, transparent 80px, black 100px, black 90%, transparent 92%, transparent),
         linear-gradient(to left, black 17px, transparent 18px);
 }
 
@@ -33,8 +54,11 @@
 
     margin-left: 10vw;
     margin-right: 10vw;
+    margin-bottom: 8vh;
 
     padding: 20px;
+
+    min-height: 80vh;
 
     background: linear-gradient(.25turn, transparent, transparent 1%, rgba(0, 0, 0, 0.7) 2%, rgba(0, 0, 0, 0.7) 98%, transparent 99%, transparent);
 }
