--- a/components/mainHeader.module.css
+++ b/components/mainHeader.module.css
@@ -1,3 +1,21 @@
+.headerContainer {
+    position: fixed;
+    width: 100%;
+    height: 80px;
+
+    z-index: 1;
+
+    pointer-events: none;
+
+    background-color: transparent;
+}
+
+.tabContainer {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
 /* .headerContainer {
     display: flex;
     flex-direction: column;
