--- a/styles/global.css
+++ b/styles/global.css
@@ -2,6 +2,8 @@
     --main-bg-color: #232323;
     --main-text-color: #ffffff;
     --secondary-text-color: #989898;
+    --background-animation-duration: 60s;
+    --background-animation-delay: 0s;
 }
 
 html, body {
