--- a/components/headerTab.module.css
+++ b/components/headerTab.module.css
@@ -13,16 +13,19 @@
     font-size: min(3vw, 20px);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    line-height: 30px;
+    line-height: 40px;
     height: 30px;
     flex-grow: 1;
     cursor: pointer;
 
-    text-decoration: underline;
+    text-decoration: underline bold;
 
     pointer-events: none;
 
-    text-shadow: 0px 0px 2px white;
+    text-shadow: 
+        0px 0px 4px white, 
+        0px 0px 4px white, 
+        0px 0px 4px white;
 }
 
 .cloudContainer {
