--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -56,7 +56,7 @@
     margin-right: 10vw;
     margin-bottom: 8vh;
 
-    padding: 20px;
+    padding: 20px 40px 20px 40px;
 
     min-height: 80vh;
 
