changed transition timing function of content container minimization to bezier curve
added instagram embed to socials page

--- a/styles/socials.module.css
+++ b/styles/socials.module.css
@@ -14,3 +14,8 @@
     height: 2px;
     background-color: var(--main-text-color);
 }
+
+.instagramEmbedContainer {
+    margin-bottom: 80px;
+    
+}
