added bottom margin to content container

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -54,7 +54,7 @@
 .contentContainer {
     position: static;
 
-    margin: 70px 10vw 0 calc(10vw + 17px);
+    margin: 70px 10vw 70px calc(10vw + 17px);
 
     padding: 20px 40px 20px 40px;
 
@@ -68,7 +68,7 @@
 .contentOverflowContainer {
     height: 100%;
     width: 100%;
-    
+
     overflow: hidden;
 }
 
