--- a/components/collapsible.module.css
+++ b/components/collapsible.module.css
@@ -37,9 +37,10 @@
 .buttonTitle {
     display: block;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-size: min(2vw, 16px);
     font-weight: bold;
-    line-height: 18px;
+
+    text-align: center;
     pointer-events: none;
     color: var(--main-text-color);
 }
