--- a/components/collapsible.module.css
+++ b/components/collapsible.module.css
@@ -1,7 +1,7 @@
 .collapsible {
     height: 50px;
     width: 100%;
-    background-color: var(--secondary-text-color);
+    background-color: rgba(115, 95, 117, 0.8);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -28,7 +28,7 @@
 .content {
     overflow: hidden;
     max-height: 0;
-    background-color: var(--secondary-text-color);
+    background-color: rgba(115, 95, 117, 0.8);
 
     transition: max-height 0.5s ease-out;
     border-radius: 0 0 10px 10px;
