removed unused wave svg
added rain drop svg and raindrop image element to header tab component

--- a/components/headerTab.module.css
+++ b/components/headerTab.module.css
@@ -37,6 +37,8 @@
     top: 0;
     z-index: -1;
 
+    pointer-events: none;
+
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -50,10 +52,8 @@
     width: 50px;
     position: absolute;
 
-    pointer-events: none;
-
     border-radius: 100%;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(236, 236, 236);
 
     transition: all .5s linear;
 }
@@ -80,4 +80,23 @@
 
 .cloudCircle.cloudCirclePath6 {
     transform: translate(30px, 38px);
+}
+
+.rainDrop {
+    position: absolute;
+    z-index: -2;
+
+    pointer-events: none;
+
+    top: 0vh;
+
+    left: 0;
+    right: 0;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    visibility: hidden;
+
+    transition: all .8s cubic-bezier(.26,.02,.47,.17);
 }
