--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -118,7 +118,7 @@
 
 @keyframes animateSky {
     0% {
-        background: rgb(192, 250, 250);
+        background: rgb(135, 227, 255);
     }
 
     25% {
@@ -134,7 +134,7 @@
     }
 
     100% {
-        background: rgb(192, 250, 250);
+        background: rgb(135, 227, 255);
     }
 }
 
@@ -150,8 +150,8 @@
 
 @keyframes animateSkyFilter {
     0% {
-        opacity: 0;
-        
+        opacity: 1;
+        background: linear-gradient(transparent, transparent 60%, rgba(255, 255, 255, 0.5));
     }
 
     15% {
@@ -184,8 +184,14 @@
         background: linear-gradient(transparent, transparent 80%, rgba(255, 167, 3, 0.726) 100%);
     }
 
-    100% {
+    86% {
         opacity: 0;
+        background: linear-gradient(transparent, transparent 60%, rgba(255, 255, 255, 0.5));
+    }
+
+    100% {
+        opacity: 1;
+        background: linear-gradient(transparent, transparent 60%, rgba(255, 255, 255, 0.5));
     }
 }
 
