--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -33,16 +33,12 @@
     width: 100%;
 }
 
-.scrollContainer {
-    position: fixed;
-    height: 100%;
-    width: 100%;
-}
-
 .contentMask {
     position: fixed;
     width: 100%;
     height: 100%;
+
+    pointer-events: all;
 
     overflow-y: scroll;
 
@@ -68,10 +64,20 @@
 }
 
 .contentOverflowContainer {
-    height: 100%;
     width: 100%;
 
     overflow: hidden;
+}
+
+.bottomContentBlocker {
+    position: fixed;
+    left: 17px;
+    right: 17px;
+    bottom: 0;
+
+    z-index: 2;
+
+    height: 8vh;
 }
 
 .controlsContainer {
