--- a/components/collapsible.module.css
+++ b/components/collapsible.module.css
@@ -35,14 +35,23 @@
 }
 
 .buttonTitle {
-    display: block;
+    display: inline-block;
     font-family: Arial, Helvetica, sans-serif;
     font-size: min(2vw, 16px);
     font-weight: bold;
-
-    text-align: center;
+    
     pointer-events: none;
     color: var(--main-text-color);
+
+    align-self: center;
+
+    line-height: 50px;
+
+    height: 50px;
+
+    margin: 0;
+
+    overflow: hidden
 }
 
 .spaceHolder {
