--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -736,6 +736,41 @@ BACKGROUND ELEMENTS STYLING
     transition-property: left;
 }
 
+/*Stars*/
+.stars {
+    position: fixed;
+    width: 100%;
+    height: 50%;
+    bottom: 50%;
+
+    background-color:transparent;
+    background-image:
+    radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
+    radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
+    radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
+    radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
+    background-size: 400px 400px, 400px 400px, 300px 300px, 300px 300px;
+    background-position: -30px -80px, 130px -50px, -90px -120px, 80px 50px;
+
+    mask-image: linear-gradient(black 50%, transparent 70%);
+
+    animation: var(--background-animation-duration) linear var(--background-animation-delay) infinite backwards hideStars;
+}
+
+@keyframes hideStars {
+    0%, 24% {
+        opacity: 0;
+    }
+
+    26%, 68% {
+        opacity: 1;
+    }
+
+    70%, 100% {
+        opacity: 0;
+    }
+}
+
 /*=================
 TRANSITION ELEMENTS
 =================*/
